tests/examples/object/map.err
Parse Error in line 18, column 3 of "map.af"
|   {3: 4} = ``,
|     ^
Error: Ill formed member

1 Parse Error encountered


line 6, column 8 of "map.af" Eval Error: Expected string, but found number
line 7, column 14 of "map.af" Eval Error: Key hello is not contained in map
line 21, column 19 of "map.af" Eval Error: Binary operator * not implemented between types map and map
line 22, column 14 of "map.af" Eval Error: Binary operator / not implemented between types number and map
4 Eval Errors encountered
